Use `.collect(Collectors.toList())` instead of `.toList()`